✨ Add a controller
